Fixed Java flags on Windows